--- a/website/index.html
+++ b/website/index.html
@@ -1,13 +1,14 @@
 <html>
 <head>
-<title>Lorenzo - Slashware Interactive</title>
-<link rel="stylesheet" type="text/css" href="lorenzo.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Lorenzo - Slashware Interactive</title>
+	<link rel="stylesheet" type="text/css" href="lorenzo.css">
 </head>
 <body>
 <section id = "main">
-	<p><a href = "play"><img src = "cart.png"></a></p>
+	<p><a href = "play"><img class = "cart" src = "cart.png"></a></p>
 	<p><b><a href = "play">Play now!</a></b></p>
-	<p>All of his life Lorenzo was trained to become a fierce fighting bull, but the day he manages to defeat his oponent against all odds, the world turns into himself and his family... will Lorenzo be able to escape and save his mother from slaughter?</p>
+	<p>All of his life Lorenzo was trained to become a fierce fighting bull, but instead of being hailed as a great champion when he manages to defeat his opponent against all odds, he sees the world turn against himself and his family. Will Lorenzo be able to escape and save his mother from being slaughtered?</p>
 	<h1>Features</h1>
 	<p>Three stages full of action.</p>
 	<p><i>La Maestranza</i></p>
