Add og metadata to website

--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,11 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:image" content="http://slashie.net/lorenzo/ogicon.png" />
+	<meta property="og:description" content="All of his life Lorenzo was trained to become a fierce fighting bull, but instead of being hailed as a great champion when he manages to defeat his opponent against all odds, he sees the world turn against himself and his family. Will Lorenzo be able to escape and save his mother from being slaughtered?" />
+	<meta property="og:url"content="http://slashie.net/lorenzo/" />
+	<meta property="og:title" content="Lorenzo" />
+
 	<title>Lorenzo - Slashware Interactive</title>
 	<link rel="stylesheet" type="text/css" href="lorenzo.css">
 </head>
