--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,19 @@
 <meta charset="UTF-8"/>
 <title>Lorenzo</title>
 <script type="text/javascript" src="phaser.min.js"></script>
-<script type="text/javascript" src="lorenzo.min.js"></script>
+<script type="text/javascript" src="lorenzo.min.js?v=2"></script>
 <link rel="stylesheet" type="text/css" href="lorenzo.css">
 </head>
 <body onload="LorenzoGame.init();">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-33613485-11', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
