--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,16 @@
 	<link rel="stylesheet" type="text/css" href="lorenzo.css">
 </head>
 <body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-33613485-11', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <section id = "main">
 	<p><a href = "play"><img class = "cart" src = "cart.png"></a></p>
 	<p><b><a href = "play">Play now!</a></b></p>
